# Learning-App

./: Cargo.toml  README.md
learning-app/: package-lock.json  package.json
learning-app/public/: index.html  manifest.json
learning-app/src/: index.css  index.js  init_db.py
learning-app/src/app/: globals.css  layout.tsx  page.tsx
learning-app/src/app/login/: page.tsx
learning-app/src/components/home/: Home.jsx  Home.module.css
learning-app/src/components/login/: Login.jsx  Login.module.css
learning-app/src/components/registration/: Registration.jsx  Registration.module.css
learning-app/src/components/start/: Start.jsx  Start.module.css
learning-app/src/configs/: database.py
learning-app/src/models/: guide.py  lesson.py  user.py
learning-app/src/reader/jsonparser/: Cargo.toml
learning-app/src/reader/jsonparser/src/: main.rs
learning-app/src/server/: Cargo.toml
learning-app/src/server/src/: lib.rs  main.rs
